Finishes restructure of files and starts worker service

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ FROM_EMAIL="tactnotifier@gmail.com"
 FROM_EMAIL_PASSWORD="teaxqktmegayadah"
 FROM_EMAIL_SMTP="smtp.gmail.com"
 SMTP_ADDR="smtp.gmail.com:587"
-TEMPLATE_DIR="./templates"
+TEMPLATE_DIR="../../templates"
 SQLITE_DB_PATH="./scheduling.db"
 TIME_FORMAT="2006-01-02 15:04:05"
 TICK="1s"
